# software_installers

./: AGENTS.md  README.md
cellpose4-sam/: README.md  cellpose_2d.bat  install_cellpose_2d.bat  main.py  pyproject.toml  shortcuts_created.txt  uninstall_cellpose_2d.bat
napari-install/: README.md  install_napari.bat  napari.bat  pyproject.toml  shortcuts_created.txt
uv_install/: README.md  install_uv_windoes.bat
