[project]
name = "cellpose-sam-windows-old-drivers"
version = "0.1.0"
description = "Cellpose-SAM on Windows via uv with CUDA 11.8 PyTorch for older NVIDIA drivers"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "cellpose[gui]>=4.1.1",
    "torch==2.7.1+cu118",
    "torchvision==0.22.1+cu118",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }